--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Quiz Box -->
        <div class="quiz_box">
         <header>
-            <div class="title">Great Basketball Quiz</div>
+            <div class="title">Ports Number Quiz</div>
             <div class="timer">
                 <div class="time_left_txt">Time Left</div>
                 <div class="timer_sec">15</div>
